# axosyslog

./: .astylerc  .editorconfig  .gitignore  .mailmap  CMakeLists.txt  CONTRIBUTING.md  COPYING  Chart.yaml  DEVELOPMENT-GUIDE.md  Makefile.am  NEWS.md  README.md  VERSION.txt  artifacthub-repo.yaml  autogen.sh  bugfix-1142.md  configure.ac  dev-requirements.txt  index.yaml  requirements.txt  values.yaml
charts/: Makefile.am
charts/axosyslog/: Chart.yaml  README.md  README.md.gotmpl  values.yaml
charts/axosyslog-collector/: Chart.yaml  README.md  values.yaml
charts/axosyslog-collector/templates/: NOTES.txt  _helpers.tpl  clusterrole.yaml  clusterrolebinding.yaml  config.yaml  daemonset.yaml  podmonitor.yaml  scc.yaml  service.yaml  serviceaccount.yaml
charts/axosyslog/templates/: NOTES.txt  _helpers.tpl  aggregator-config.yaml  aggregator-statefulset.yaml  clusterrole.yaml  clusterrolebinding.yaml  collector-config.yaml  collector-daemonset.yaml  collector.yaml  config.yaml  daemonset.yaml  podmonitor.yaml  scc.yaml  service.yaml  serviceaccount.yaml  syslog-config.yaml  syslog-statefulset.yaml
charts/docs/: README.md
charts/docs/templates/: overrides.gotmpl
charts/syslog-ng-collector/: Chart.yaml  README.md  values.yaml
charts/syslog-ng-collector/templates/: NOTES.txt  _helpers.tpl  clusterrole.yaml  clusterrolebinding.yaml  config.yaml  daemonset.yaml  deployment.yaml  scc.yaml  serviceaccount.yaml
contrib/: Brewfile  Makefile.am  README  get-github-actions-status.py
contrib/openbsd-packaging/: syslog-ng.conf
docker/: .gitignore  Makefile.am  alpine-base.dockerfile  alpine.dockerfile  axosyslog-builder.dockerfile  axosyslog.dockerfile
docker/python-modules/webhook/: __init__.py  source.py
lib/adt/tests/: CMakeLists.txt  Makefile.am  test_ilist.c  test_iord_map.c
lib/debugger/: Makefile.am  cmd-continue.c  cmd-display.c  cmd-drop.c  cmd-follow.c  cmd-help.c  cmd-info.c  cmd-list.c  cmd-print.c  cmd-printx.c  cmd-quit.c  cmd-step.c  cmd-trace.c  debugger-main.c  debugger-main.h  debugger.c  debugger.h  tracer.c  tracer.h
lib/debugger/tests/: test-debugger.c
lib/filterx/: CMakeLists.txt  Makefile.am  expr-arithmetic-operators.c  expr-arithmetic-operators.h  expr-assign.c  expr-assign.h  expr-boolalg.c  expr-boolalg.h  expr-break.c  expr-break.h  expr-comparison.c  expr-comparison.h  expr-compound.c  expr-compound.h  expr-condition.c  expr-condition.h  expr-conditional.c  expr-conditional.h  expr-done.c  expr-done.h  expr-drop.c  expr-drop.h  expr-function.c  expr-function.h  expr-generator.c  expr-generator.h  expr-get-subscript.c  expr-get-subscript.h  expr-getattr.c  expr-getattr.h  expr-isset.c  expr-isset.h  expr-literal-container.c  expr-literal-container.h  expr-literal-generator.c  expr-literal-generator.h  expr-literal.c  expr-literal.h  expr-membership.c  expr-membership.h  (+172 more)
lib/filterx/jit/: CMakeLists.txt  Makefile.am  bc-loader.c  bc-loader.h  ffi.c  ffi.h  jit-private.h  jit-runtime.c  jit.c  jit.h
lib/filterx/tests/: CMakeLists.txt  Makefile.am  test_builtin_functions.c  test_expr_arithmetic_operators.c  test_expr_comparison.c  test_expr_compound.c  test_expr_condition.c  test_expr_conditional.c  test_expr_function.c  test_expr_null_coalesce.c  test_expr_plus.c  test_expr_plus_generator.c  test_expr_regexp.c  test_expr_regexp_search.c  test_expr_regexp_subst.c  test_filterx_eval.c  test_filterx_expr.c  test_filterx_object.c  test_filterx_plist.c  test_func_digest.c  test_func_encode.c  test_func_flatten.c  test_func_format_json.c  test_func_glob.c  test_func_istype.c  test_func_keys.c  test_func_path_lookup.c  test_func_set_pri.c  test_func_str_utf8.c  test_func_unset_empties.c  test_func_uuid.c  test_json_repr.c  test_object_cow.c  (+21 more)
lib/scanner/: CMakeLists.txt
modules/afmongodb/: CMakeLists.txt  Makefile.am  afmongodb-grammar.ym  afmongodb-parser.c  afmongodb-parser.h  afmongodb-private.h  afmongodb-worker.c  afmongodb-worker.h  afmongodb.c  afmongodb.h
modules/arrow-flight/: CMakeLists.txt  Makefile.am  arrow-flight-dest.cpp  arrow-flight-dest.h  arrow-flight-dest.hpp  arrow-flight-grammar.ym  arrow-flight-parser.c  arrow-flight-parser.h  arrow-flight-plugin.c  arrow-flight-worker.cpp  arrow-flight-worker.h  arrow-flight-worker.hpp
modules/grpc/: CMakeLists.txt  Makefile.am
modules/http-adapters/: CMakeLists.txt  Makefile.am  http-adapter.c  http-adapter.h  http-adapters-grammar.ym  http-adapters-parser.c  http-adapters-parser.h  http-adapters-plugin.c  openobserve-adapter.c  openobserve-adapter.h  splunk-adapter.c  splunk-adapter.h
modules/http-source/: CMakeLists.txt  Makefile.am  http-server-listener.c  http-server-listener.h  http-source-config.c  http-source-config.h  http-source-grammar.ym  http-source-parser.c  http-source-parser.h  http-source-plugin.c  http-source.c  http-source.h
modules/kafka/: CMakeLists.txt  Makefile.am  kafka-dest-driver.c  kafka-dest-driver.h  kafka-dest-worker.c  kafka-dest-worker.h  kafka-grammar.ym  kafka-internal.c  kafka-internal.h  kafka-parser.c  kafka-parser.h  kafka-plugin.c  kafka-props.c  kafka-props.h  kafka-source-driver.c  kafka-source-driver.h  kafka-source-persist.c  kafka-source-persist.h  kafka-source-worker.c  kafka-source-worker.h  kafka-topic-parts.c  kafka-topic-parts.h
modules/metrics-probe/: CMakeLists.txt  Makefile.am  metrics-probe-grammar.ym  metrics-probe-parser.c  metrics-probe-parser.h  metrics-probe-plugin.c  metrics-probe.c  metrics-probe.h
modules/native/: CMakeLists.txt  Makefile.am  native-grammar.ym  native-parser.c  native-parser.h  parser.c  parser.h
modules/secure-logging/: Makefile.am  secure-logging.c  slog.c  slog.h
scripts/plugin-skeleton-creator/: Makefile.am  create_plugin.sh  plugin_template_grammar.ym  plugin_template_parser.c  plugin_template_parser.h  plugin_template_plugin.c
syslog-ng/: Makefile.am  alpine.dockerfile  main.c  wrapper.c
syslog-ng-fx/: CMakeLists.txt  Makefile.am  syslog-ng-fx.c
syslog-ng/python-modules/: requirements.txt
tests/light/: CMakeLists.txt  Makefile.am  README.md  conftest.py  pyproject.toml  pytest.ini
(+2791 files in other folders)
