EXTRA_DIST += \
    charts/axosyslog/Chart.yaml \
    charts/axosyslog/.helmignore \
    charts/axosyslog/README.md \
    charts/axosyslog/README.md.gotmpl \
    charts/axosyslog/templates/aggregator-statefulset.yaml \
    charts/axosyslog/templates/NOTES.txt \
    charts/axosyslog/templates/podmonitor.yaml \
    charts/axosyslog/templates/service.yaml \
    charts/axosyslog/templates/clusterrole.yaml \
    charts/axosyslog/templates/serviceaccount.yaml \
    charts/axosyslog/templates/aggregator-config.yaml \
    charts/axosyslog/templates/_helpers.tpl \
    charts/axosyslog/templates/collector-daemonset.yaml \
    charts/axosyslog/templates/scc.yaml \
    charts/axosyslog/templates/clusterrolebinding.yaml \
    charts/axosyslog/templates/collector-config.yaml \
    charts/axosyslog/values.yaml
