EXTRA_DIST += \
    docker/python-modules/webhook/__init__.py \
    docker/python-modules/webhook/scl/webhook.conf \
    docker/python-modules/webhook/source.py \
    docker/python-modules/requirements.txt \
    docker/tests/smoke.sh \
    docker/alpine.dockerfile \
    docker/apkbuild/axoflow/rootbld-repositories \
    docker/apkbuild/axoflow/axosyslog/APKBUILD \
    docker/apkbuild/axoflow/axosyslog/APKBUILD-debug.patch \
    docker/apkbuild/axoflow/axosyslog/axosyslog-python3.post-install
