EXTRA_DIST += \
    docker/tests/smoke.sh \
    docker/axosyslog.dockerfile \
    docker/axosyslog-builder.dockerfile \
    docker/apkbuild/axoflow/rootbld-repositories \
    docker/apkbuild/axoflow/axosyslog/APKBUILD \
    docker/apkbuild/axoflow/axosyslog/APKBUILD-debug.patch \
    docker/apkbuild/axoflow/axosyslog/axosyslog-python3.post-install
