add_subdirectory(jit)

set(FILTERX_HEADERS
    ${FILTERX_JIT_HEADERS}
    filterx/expr-arithmetic-operators.h
    filterx/expr-assign.h
    filterx/expr-boolalg.h
    filterx/expr-break.h
    filterx/expr-comparison.h
    filterx/expr-compound.h
    filterx/expr-condition.h
    filterx/expr-done.h
    filterx/expr-drop.h
    filterx/expr-function.h
    filterx/expr-get-subscript.h
    filterx/expr-getattr.h
    filterx/expr-isset.h
    filterx/expr-literal-container.h
    filterx/expr-literal.h
    filterx/expr-membership.h
    filterx/expr-move.h
    filterx/expr-null-coalesce.h
    filterx/expr-plus.h
    filterx/expr-plus-assign.h
    filterx/expr-regexp-common.h
    filterx/expr-regexp-search.h
    filterx/expr-regexp-subst.h
    filterx/expr-regexp.h
    filterx/expr-set-subscript.h
    filterx/expr-setattr.h
    filterx/expr-switch.h
    filterx/expr-template.h
    filterx/expr-unset.h
    filterx/expr-variable.h
    filterx/expr-string-operators.h
    filterx/filterx-allocator.h
    filterx/filterx-config.h
    filterx/filterx-error.h
    filterx/filterx-eval.h
    filterx/filterx-env.h
    filterx/filterx-expr.h
    filterx/filterx-plist.h
    filterx/filterx-globals.h
    filterx/filterx-metrics-labels.h
    filterx/filterx-metrics.h
    filterx/filterx-object.h
    filterx/filterx-parser.h
    filterx/filterx-pipe.h
    filterx/filterx-private.h
    filterx/filterx-ref.h
    filterx/filterx-scope.h
    filterx/filterx-scope-var-layout.h
    filterx/filterx-stashed-object.h
    filterx/filterx-type-inference.h
    filterx/filterx-variable.h
    filterx/filterx-weakrefs.h
    filterx/filterx-dpath.h
    filterx/filterx-sequence.h
    filterx/filterx-mapping.h
    filterx/json-repr.h
    filterx/jsmn.h
    filterx/func-flags.h
    filterx/func-flatten.h
    filterx/func-cache-json-file.h
    filterx/func-istype.h
    filterx/func-len.h
    filterx/func-sdata.h
    filterx/func-set-fields.h
    filterx/func-set-pri.h
    filterx/func-timestamp.h
    filterx/func-str-transform.h
    filterx/func-str.h
    filterx/func-unset-empties.h
    filterx/func-vars.h
    filterx/func-repr.h
    filterx/func-failure-info.h
    filterx/func-dict-to-pairs.h
    filterx/func-uuid.h
    filterx/func-digest.h
    filterx/func-encode.h
    filterx/func-glob.h
    filterx/object-datetime.h
    filterx/object-subnet.h
    filterx/object-ip.h
    filterx/object-dict.h
    filterx/object-extractor.h
    filterx/object-list.h
    filterx/object-message-value.h
    filterx/object-metrics-labels.h
    filterx/object-null.h
    filterx/object-primitive.h
    filterx/object-string.h
    filterx/func-keys.h
    PARENT_SCOPE
    )

set(FILTERX_SOURCES
    ${FILTERX_JIT_SOURCES}
    filterx/expr-arithmetic-operators.c
    filterx/expr-assign.c
    filterx/expr-boolalg.c
    filterx/expr-break.c
    filterx/expr-comparison.c
    filterx/expr-compound.c
    filterx/expr-condition.c
    filterx/expr-done.c
    filterx/expr-drop.c
    filterx/expr-function.c
    filterx/expr-get-subscript.c
    filterx/expr-getattr.c
    filterx/expr-isset.c
    filterx/expr-literal-container.c
    filterx/expr-literal.c
    filterx/expr-membership.c
    filterx/expr-move.c
    filterx/expr-null-coalesce.c
    filterx/expr-plus.c
    filterx/expr-plus-assign.c
    filterx/expr-regexp-common.c
    filterx/expr-regexp-search.c
    filterx/expr-regexp-subst.c
    filterx/expr-regexp.c
    filterx/expr-set-subscript.c
    filterx/expr-setattr.c
    filterx/expr-switch.c
    filterx/expr-template.c
    filterx/expr-unset.c
    filterx/expr-variable.c
    filterx/expr-string-operators.c
    filterx/filterx-allocator.c
    filterx/filterx-config.c
    filterx/filterx-error.c
    filterx/filterx-eval.c
    filterx/filterx-env.c
    filterx/filterx-expr.c
    filterx/filterx-plist.c
    filterx/filterx-globals.c
    filterx/filterx-metrics-labels.c
    filterx/filterx-metrics.c
    filterx/filterx-object.c
    filterx/filterx-parser.c
    filterx/filterx-pipe.c
    filterx/filterx-private.c
    filterx/filterx-ref.c
    filterx/filterx-scope.c
    filterx/filterx-scope-var-layout.c
    filterx/filterx-stashed-object.c
    filterx/filterx-type-inference.c
    filterx/filterx-variable.c
    filterx/filterx-weakrefs.c
    filterx/filterx-dpath.c
    filterx/filterx-sequence.c
    filterx/filterx-mapping.c
    filterx/json-repr.c
    filterx/func-flatten.c
    filterx/func-cache-json-file.c
    filterx/func-istype.c
    filterx/func-len.c
    filterx/func-sdata.c
    filterx/func-set-fields.c
    filterx/func-set-pri.c
    filterx/func-timestamp.c
    filterx/func-str-transform.c
    filterx/func-str.c
    filterx/func-unset-empties.c
    filterx/func-vars.c
    filterx/func-repr.c
    filterx/func-failure-info.c
    filterx/func-dict-to-pairs.c
    filterx/func-uuid.c
    filterx/func-digest.c
    filterx/func-encode.c
    filterx/func-glob.c
    filterx/object-datetime.c
    filterx/object-subnet.c
    filterx/object-ip.c
    filterx/object-dict.c
    filterx/object-list.c
    filterx/object-message-value.c
    filterx/object-metrics-labels.c
    filterx/object-null.c
    filterx/object-primitive.c
    filterx/object-string.c
    filterx/func-keys.c
    PARENT_SCOPE
    )

set(FILTERX_BITCODE_SOURCES
    ${FILTERX_JIT_BITCODE_SOURCES}
    expr-arithmetic-operators.c
    expr-assign.c
    expr-boolalg.c
    expr-break.c
    expr-comparison.c
    expr-compound.c
    expr-condition.c
    expr-done.c
    expr-drop.c
    expr-function.c
    expr-get-subscript.c
    expr-getattr.c
    expr-isset.c
    expr-literal-container.c
    expr-literal.c
    expr-membership.c
    expr-move.c
    expr-null-coalesce.c
    expr-plus-assign.c
    expr-plus.c
    expr-regexp-common.c
    expr-regexp-search.c
    expr-regexp-subst.c
    expr-regexp.c
    expr-set-subscript.c
    expr-setattr.c
    expr-string-operators.c
    expr-switch.c
    expr-template.c
    expr-unset.c
    expr-variable.c
    filterx-expr.c
    filterx-mapping.c
    filterx-object.c
    filterx-ref.c
    filterx-scope.c
    filterx-sequence.c
    filterx-variable.c
    filterx-weakrefs.c
    object-dict.c
    object-list.c
    object-message-value.c
    object-primitive.c
    object-string.c
    )

if(SYSLOG_NG_ENABLE_JIT)
  find_program(LLVM_CLANG clang HINTS ${LLVM_TOOLS_BINARY_DIR} REQUIRED)
  find_program(LLVM_LINK llvm-link HINTS ${LLVM_TOOLS_BINARY_DIR} REQUIRED)

  set(FILTERX_BITCODE_UNITS "")
  foreach(_src IN LISTS FILTERX_BITCODE_SOURCES)
    set(_bc "${CMAKE_CURRENT_BINARY_DIR}/${_src}.bc")
    get_filename_component(_bc_dir "${_bc}" DIRECTORY)
    add_custom_command(
      OUTPUT "${_bc}"
      COMMAND ${CMAKE_COMMAND} -E make_directory "${_bc_dir}"
      COMMAND ${LLVM_CLANG}
              -D_GNU_SOURCE=1 -D_LARGEFILE64_SOURCE=1
              "-I$<JOIN:$<TARGET_PROPERTY:syslog-ng,INCLUDE_DIRECTORIES>,;-I>"
              -emit-llvm -O3 --no-warnings
              -c "${CMAKE_CURRENT_SOURCE_DIR}/${_src}" -o "${_bc}"
      DEPENDS "${CMAKE_CURRENT_SOURCE_DIR}/${_src}"
      COMMAND_EXPAND_LISTS
      VERBATIM)
    list(APPEND FILTERX_BITCODE_UNITS "${_bc}")
  endforeach()

  add_custom_command(
    OUTPUT "${CMAKE_CURRENT_BINARY_DIR}/jit/libfilterx.bc"
    COMMAND ${LLVM_LINK} -o "${CMAKE_CURRENT_BINARY_DIR}/jit/libfilterx.bc" ${FILTERX_BITCODE_UNITS}
    DEPENDS ${FILTERX_BITCODE_UNITS}
    VERBATIM)
  add_custom_target(filterx-bitcode
    DEPENDS "${CMAKE_CURRENT_BINARY_DIR}/jit/libfilterx.bc")
endif()

add_test_subdirectory(tests)
