EXTRA_DIST +=	\
	scripts/plugin-skeleton-creator	\
	scripts/plugin-skeleton-creator/create_plugin.sh	\
	scripts/plugin-skeleton-creator/plugin_template_CMakeLists.txt	\
	scripts/plugin-skeleton-creator/plugin_template_grammar.ym	\
	scripts/plugin-skeleton-creator/plugin_template_Makefile.am	\
	scripts/plugin-skeleton-creator/plugin_template_parser.c	\
	scripts/plugin-skeleton-creator/plugin_template_parser.h	\
	scripts/plugin-skeleton-creator/plugin_template_plugin.c
